apropos/whatis: use output of manpath(1) to set defpaths if -M is not specified.  This fixes searching the paths specified in /usr/local/etc/man.d/*.conf, as currently apropos/whatis from mandoc suite aren't aware about them.

PR:		227922
Reviewed by:	bapt
Approved by:	re (gjb), kib (mentor)
Differential Revision:	https://reviews.freebsd.org/D17454


git-svn-id: svn+ssh://svn.freebsd.org/base/head@339385 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f